@@ -1,6 +1,7 @@
 0.014 2024-11-18
   [New Features]
     * Add Net::SSLeay::OCSP#single_get0_status method.
+    * Add Net::SSLeay::OCSP#resp_find method.
 0.013 2024-11-14
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
